--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "syn-quill",
-  "version": "1.1.0",
+  "name": "syn-way-quill",
+  "version": "1.0.0",
   "description": "使用quill.js插件创建的vue组件包",
+  "homepage": "https://github.com/zhang104/syn-quill",
   "entry": "packages/components/BaseQuill/index.vue",
   "main": "lib/index.js",
   "scripts": {
@@ -42,7 +43,6 @@
     "vue-template-compiler": "^2.7.14"
   },
   "dependencies": {
-    "quill": "^1.3.7",
-    "rimraf": "^5.0.1"
+    "quill": "^1.3.7"
   }
 }
