--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "syn-way-quill",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "使用quill.js插件创建的vue组件包",
   "homepage": "https://github.com/zhang104/syn-way-quill.git",
-  "entry": "packages/components/BaseQuill/index.vue",
   "main": "lib/index.js",
   "scripts": {
     "build": "pnpm clean && rollup -c",
     "clean": "rimraf ./lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "quill.js",
+    "vue",
+    "rollup"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -43,6 +46,7 @@
     "vue-template-compiler": "^2.7.14"
   },
   "dependencies": {
-    "quill": "^1.3.7"
+    "quill": "^1.3.7",
+    "rimraf": "^5.0.1"
   }
 }
